remove warnings and start setup for compression